--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,53 @@
-<style>
+
 body {
-  background-color: orange;
+    margin: 1em auto;
+    width: 75%;
+    background: #bcfaff;
 }
-
-h1 {
-  color: red;
-  text-align: center;
+header {
+    width: 100%;
+    padding: 1em;
+    text-align: center;
+    background: #bcd7ff;
+    border-bottom: 0 none;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+    font-family: 'Work Sans', sans-serif;
+    color: #ea5dc2;
 }
-
+.row {
+    height: auto;
+    overflow: hidden;
+    padding: 1em;
+}
 p {
-  font-family: verdana;
-  font-size: 20px;
+    border-bottom: 0 none;
+    display: block;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+    float: left;
+    width: 40%;
+    font-size: 1em;
+    line-height: 1.5em;
+    padding: 1em;
+    margin: 1em 0;
+    background:#ffd6f3;
+    color: #454647;
 }
-
 img {
-  float: right;
+    display: block;
+    border-bottom: 0 none;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+    float: right;
+    width: 40%;
+    margin: 1em 0;
+
 }
-</style>
+button {
+    border-bottom: 0 none;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    background: #efefff;
+    display: block;
+    clear: both;
+    padding: 0.5em;
+    margin: 0 auto;
+}
